--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -18,20 +18,20 @@
   --step-5: clamp(3.7325rem, 2.338rem + 6.1975vw, 9.1553rem);
 }
 
-@theme inline {
+/* @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
 
   --font-sans: var(--font-inter);
-}
+} */
+
+
 
 body {
   color: var(--foreground);
-
-  /* Base color */
   background-color: #080808;
 
-  /* Global flowing background */
+
   background-image: radial-gradient(
       circle at 60% 0%,
       rgba(17, 20, 53, 0.85) 0%,
@@ -49,5 +49,5 @@ body {
     );
 
   background-repeat: no-repeat;
-  background-attachment: fixed; /* optional but very nice */
+  background-attachment: fixed; 
 }
